module(name = "com_github_tnarg_rules_cue")

bazel_dep(name = "platforms", version = "0.0.11")

bazel_dep(name = "rules_go", version = "0.52.0", repo_name = "io_bazel_rules_go")
bazel_dep(name = "gazelle", version = "0.37.0", repo_name = "bazel_gazelle")

go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.24.1")

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_bazelbuild_buildtools",
    "com_github_iancoleman_strcase",
    "io_rsc_zipmerge",
    "org_cuelang_go",
)

cue_runtime = use_extension("@com_github_tnarg_rules_cue//cue:extensions.bzl", "runtime")
cue_runtime.runtime(version = "0.6.0")
use_repo(
    cue_runtime,
    "cue_runtime_darwin_arm64",
    "cue_runtime_darwin_x86_64",
    "cue_runtime_linux_arm64",
    "cue_runtime_linux_x86_64",
    "cue_runtime_windows_arm64",
    "cue_runtime_windows_x86_64",
)
